--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "1.0.0",
   "description": "A collection of my solutions to various coding challenges from platforms. Feel free to explore, learn, and provide feedback!",
   "scripts": {
-    "build": "pug ./frontendmentor/qr-code-component/src -o ./frontendmentor/qr-code-component -P -w"
+    "pug": "pug ./frontendmentor/qr-code-component/src -o ./frontendmentor/qr-code-component -P -w",
+    "sass": "sass --watch ."
   },
   "repository": {
     "type": "git",
